[package]
name = "cashweb-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoinsuite-core = { path = "../../bitcoinsuite/bitcoinsuite-core" }
bitcoinsuite-bitcoind = { path = "../../bitcoinsuite/bitcoinsuite-bitcoind" }
bitcoinsuite-error = { path = "../../bitcoinsuite/bitcoinsuite-error" }
bitcoinsuite-ecc-secp256k1 = { path = "../../bitcoinsuite/bitcoinsuite-ecc-secp256k1" }
bitcoinsuite-test-utils = { path = "../../bitcoinsuite/bitcoinsuite-test-utils" }
bitcoinsuite-test-utils-blockchain = { path = "../../bitcoinsuite/bitcoinsuite-test-utils-blockchain" }

cashweb-http-utils = { path = "../cashweb-http-utils" }
cashweb-payload = { path = "../cashweb-payload" }

# Web app framework
axum = { version = "0.5", features = ["ws"] }

# Bloom filter for an approximate set
bloom = "0.3"

# Common library for anything futures related
futures = "0.3"

# Build JSON objects
json = "0.12"

# Protobuf (de)serialization
prost = "0.11"

# Random number generator
rand = "0.8"

# Simple HTTP client
reqwest = "0.11"

# Fast embedded key-value database
rocksdb = "0.19"

# Derive error enums
thiserror = "1.0"

# Async runtime
tokio = { version = "1.17", features = ["full"] }

# Url parsing
url = { version = "2.2", features = ["serde"] }

# Hex en-/decoding
hex = "0.4"

[build-dependencies]
# Build Protobuf structs
prost-build = "0.11"

[dev-dependencies]
bitcoinsuite-ecc-secp256k1 = { path = "../../bitcoinsuite/bitcoinsuite-ecc-secp256k1" }

# assert_eq! and assert_ne! with colored diffs
pretty_assertions = "1.2"

# Temporary directories, automatically removed
tempdir = "0.3"
